# DDD2C

./: CMakeLists.txt  README.md
CSDK/: CMakeLists.txt
CSDK/include/CSDK/: Callback.h  Connection.h  Core.h  Device.h  Resource.h
CSDK/src/: Callback.cpp  Connection.cpp  Core.cpp  Device.cpp  PtrHolder.h  Resource.cpp
ClientC/: CMakeLists.txt  main.c
ClientCpp/: CMakeLists.txt  main.cpp
CppUser/: CMakeLists.txt  main.cpp
SDK/: CMakeLists.txt
SDK/include/: SDK.h
SDK/include/core/: Collection.h  Factory.h  Object.h  Permission.h  Property.h
SDK/include/domain/: Connection.h  Device.h  Resource.h
SDK/include/factory/: ConnectionFactory.h  DeviceFactory.h  ResourceFactory.h
SDK/src/: ConcreteConnection.cpp  ConcreteConnection.h  ConcreteConnectionFactory.cpp  ConcreteConnectionFactory.h  ConcreteDevice.cpp  ConcreteDevice.h  ConcreteDeviceFactory.cpp  ConcreteDeviceFactory.h  ConcreteResourceFactory.cpp  ConcreteResourceFactory.h  SDK.cpp  Utility.h
